# raft

./: .gitignore  CLAUDE.md  build-mobile.sh
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
core/: Cargo.toml  cbindgen.toml
core/benches/: storage.rs
core/include/: raft.h
core/src/: engine.rs  lib.rs
core/src/compaction/: error.rs  merge.rs  mod.rs  scheduler.rs
core/src/crdt/: counter.rs  lww.rs  mod.rs  orset.rs
core/src/ffi/: error.rs  handle.rs  mod.rs
core/src/index/: btree.rs  hash.rs  mod.rs
core/src/manifest/: error.rs  mod.rs  record.rs  version.rs
core/src/memtable/: mod.rs
core/src/query/: document.rs  executor.rs  filter.rs  mod.rs  planner.rs  sort.rs
core/src/reactive/: bus.rs  event.rs  live_query.rs  mod.rs
core/src/schema/: builder.rs  error.rs  field.rs  mod.rs  version.rs
core/src/sstable/: bloom.rs  error.rs  mod.rs  reader.rs  writer.rs
core/src/sync/: authority.rs  mod.rs  resolver.rs
core/src/transaction/: error.rs  mod.rs  store.rs  txn.rs
core/src/wal/: entry.rs  error.rs  mod.rs  writer.rs
flutter/: README.md  ffigen.yaml  pubspec.yaml
flutter/android/: build.gradle  settings.gradle
flutter/example/: README.md  pubspec.yaml
flutter/example/integration_test/: plugin_integration_test.dart
flutter/example/lib/: main.dart
flutter/example/test/: widget_test.dart
flutter/ios/: raft_db_flutter.podspec
flutter/ios/Classes/: RaftDbFlutterPlugin.swift
flutter/ios/RaftDB.xcframework/: Info.plist
flutter/lib/: raft_db_flutter.dart  raft_db_flutter_method_channel.dart  raft_db_flutter_platform_interface.dart
flutter/lib/src/: raft_db.dart  raft_db_bindings.dart
flutter/test/: raft_db_flutter_method_channel_test.dart  raft_db_flutter_test.dart
rn/: LICENSE  README.md  Raft.podspec  jest.config.js  nitro.json  package-lock.json  package.json  post-script.js
rn/android/: CMakeLists.txt  build.gradle  gradle.properties
rn/android/src/main/cpp/: cpp-adapter.cpp
rn/android/src/main/java/com/raft/: HybridRaft.kt  RaftPackage.kt
rn/example/: App.tsx  app.json  package.json  tsconfig.json
rn/example/android/: settings.gradle
rn/example/ios/: Podfile
rn/ios/: Bridge.h  HybridRaft.swift
rn/src/: index.ts
rn/src/__tests__/: RaftDB.test.ts
swift/: Package.swift
(+27 files in other folders)
